[releng] Bump version to 2.3.1
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>
Change-Id: I5776c227431e08e3e4d59ad871848fb3c3ef5a4f