@@ -20,16 +20,16 @@
 	<parent>
 		<groupId>org.eclipse.sirius.emfjson</groupId>
 		<artifactId>org.eclipse.sirius.emfjson.releng</artifactId>
-		<version>2.3.0-SNAPSHOT</version>
+		<version>2.3.1-SNAPSHOT</version>
 		<relativePath>../../releng/org.eclipse.sirius.emfjson.releng</relativePath>
 	</parent>
 
 
 	<artifactId>org.eclipse.sirius.emfjson.tests</artifactId>
-	<version>2.3.0-SNAPSHOT</version>
+	<version>2.3.1-SNAPSHOT</version>
 	<packaging>eclipse-test-plugin</packaging>
 
-	<name>EMFJson Test</name>
+	<name>Sirius EMF JSON - Tests</name>
 	<build>
     <plugins>
       <plugin>
@@ -44,7 +44,7 @@
           <useUIHarness>false</useUIHarness>
           <useUIThread>false</useUIThread>
           <testFailureIgnore>false</testFailureIgnore>
-          <appArgLine>-Xmx1024m -XX:MaxPermSize=256m</appArgLine>
+          <appArgLine>-Xmx1024m</appArgLine>
         </configuration>
       </plugin>
      </plugins>
